--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,8 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description"
           content="Web site created using create-react-app" />
+    <!-- CONTENT-SECURITY-POLICY - Directive will only allow scripts to be loaded from the same origin as the page itself or a specific domain (Ex. localhost) -->
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' http://localhost:3000;" />
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500&family=IBM+Plex+Mono:ital,wght@0,300;0,400;1,300;1,400&family=Indie+Flower&family=M+PLUS+Rounded+1c:wght@100;400&family=Red+Hat+Display:wght@300;400&family=Shadows+Into+Light&display=swap"
           rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" 
